# tg-ws-proxy

./: .gitignore  Dockerfile  README.md  README_macOS.md  autorun_helper.bat  go.mod  install.sh  linux.py  macos.py  macos.spec  preview_icons.py  pyproject.toml  requirements.txt  tg-ws-proxy.desktop  tg-ws-proxy.go  tg_ws_tray.py  uninstall.sh  windows.py
.github/: github-bot.yml  working_proxies.txt
android/: build-local-debug.sh  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
deploy/: .env.example  docker-compose.yml  install-systemd.sh
docker/: entrypoint.sh
docs/: BotApi.md  BuildFromSource.md  CfWorker.md  README.docker.md  README.linux.md  README.md  TestDc.md  TrayConfig.md  VPS.md
macos/: README.md  icon.icns  macos.py  macos.spec
packaging/: build-linux.sh  com.tg-ws-proxy.plist  install-linux.sh  linux.spec  macos.spec  macos_icon.py  tg-ws-proxy.desktop  tg-ws-proxy.service  version_info.txt  windows.spec
proxy/: __init__.py  app_runtime.py  balancer.py  bot_api_proxy.py  bridge.py  config.py  pool.py  raw_websocket.py  tg_ws_proxy.py  utils.py
requirements/: README.md  linux.txt  macos.txt  windows-py38.txt  windows-py39plus.txt
tests/: test_android_proxy_bridge.py  test_app_runtime.py  test_config.py  test_crypto_mtproto.py  test_socks5_protocol.py  test_update_check.py
ui/: ctk_theme.py  ctk_tray_ui.py  tray_icons.py
utils/: app_icon.py  default_config.py  linux_integration.py  resume_watchdog.py  tray_common.py  tray_diagnostics.py  tray_lock.py  tray_proxy_runner.py  (+4 more)
(+58 files in other folders)
